# sfs

./: CMakeLists.txt  README.md
include/: file_server.hpp  logger.hpp  request.hpp  response.hpp  router.hpp  server.hpp  thread_pool.hpp
public/: index.html  style.css
src/: file_server.cpp  main.cpp  request.cpp  response.cpp  router.cpp  server.cpp  thread_pool.cpp
utils/: string_utils.hpp
